docs/v0.8.1/_sources/gallery/extras/index.rst.txt
:orphan:

Examples: extras
================


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This script simulates flow cytometer signals using the FlowCytometer class and analyzes the results using the PulseAnalyzer class from the FlowCyPy library. The signals generated (forward scatter and side scatter) provide insights into the physical properties of particles passing through the laser beam.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_continuous_acquisition_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_continuous_acquisition.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">WorkFlow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This script demonstrates how to visualize various particle size distributions from the FlowCyPy library. It generates and plots particle sizes based on different statistical distributions, such as Normal, LogNormal, Weibull, and more.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_distributions_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_distributions.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Particle Distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This script simulates signals from a flow cytometer using Rayleigh scattering to model the interaction of particles with a laser beam. It demonstrates how to generate Forward Scatter (FSC) and Side Scatter (SSC) signals using FlowCyPy and visualize the results.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_flow_cytometer_signal_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_flow_cytometer_signal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Generating Signal</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This script simulates a flow cytometer using the FlowCyPy library. It models light scattering from particles detected by two detectors (Forward Scatter and Side Scatter) and visualizes the scattering intensities in a 2D hexbin plot.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_scatterer_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_scatterer_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scatterer Collection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This script simulates flow cytometer signals using the FlowCytometer class and analyzes the results using the PulseAnalyzer class from the FlowCyPy library. The signals generated (forward scatter and side scatter) provide insights into the physical properties of particles passing through the laser beam.">

.. only:: html

  .. image:: /gallery/extras/images/thumb/sphx_glr_triggered_acquisition_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_extras_triggered_acquisition.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">WorkFlow</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/extras/continuous_acquisition
   /gallery/extras/distributions
   /gallery/extras/flow_cytometer_signal
   /gallery/extras/scatterer_distribution
   /gallery/extras/triggered_acquisition



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
